History of Win32::API perl extension.

2013-07-04  Win32::API v0.76_03    bulk88
   - Fixed, rebuilt API_test64.dll to fix a problem where Debug CRT was required
     by manifest but not by import table, this caused API_test64.dll to be
     unloadable on many x64 CPANTesters machines
   - 2 Makefile.PL files are not executable in the CPAN tarball anymore for
     Kwalitee reasons

2013-06-27  Win32::API v0.76_02    bulk88
   - Fixed, on 32 bits, Call_asm since 0.76_01, in Visual Studio, even with
     symbols loaded, lost the the part of the call stack behind Call_asm in VS
     debugger, while in the body of Call_asm, in a crash this made debugging
     harder by showing a corrupt or incomplete call stack, the prologue code was
     reworked to enable traditional EBP walking
   - Changed RaiseException/TerminateProcess on ESP inconsistency to a catchable
     die() if no C debugger is attached, community opinion from PerlMonks, if
     C debugger is attached, then Win32::API crashes to enable examination of
     process state
   - Added, previously (v0.76_01) 32 bit VC-only stack checking/ESP
     inconsistency now works on 32 bit GCC for __stdcall/__cdecl mixups only,
     not for wrong number of params (C stack overwritten)
   - Fixed, iat.t fatally exits after "ok 23" with "Usage:
     Win32::API::Callback::IATPatch::new(classSV, callback, HookDll,
     ImportDllName, ImportFunctionName) at t/iat.t line 163." on 32 bit Mingw
     Perl with 64 bit IVs (all of iat.t is skipped on 32 bit Cygwin Perls with
     64 bit IVs, so test was never executed before), reported by kmx
   - Fixed, when using Win32::API::Import, the API object internally created was
     leaked, now when the sub is freeded, the API object also is destroyed, this
     might unload the DLL being called, previously the DLL referenced by a
     ::Import was never unloaded except at interpreter exit
   - Fixed, Win32::API::More::Import created Win32::API objs,
     not Win32::API::More